--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -63,6 +63,9 @@
 <!ENTITY Ctr_closeonleft	"Alternativ placering på faneblad">
 <!ENTITY Ctr_close_wwltab	"Luk vindue med det sidste synlige faneblad (about:config)">
 
+<!ENTITY Ctr_hctpinfotab	"Some tab variations are not compatible to 'Hide Caption Titlebar Plus' add-on.">
+<!ENTITY Ctr_hctpinfoab		"Button on titlebar is not compatible to 'Hide Caption Titlebar Plus' add-on.">
+
 <!ENTITY Ctr_appbutton		"Firefox-menuknap">
 <!ENTITY Ctr_appbutton0		"Deaktiver knap">
 <!ENTITY Ctr_appbutton1		"Knap på værktøjslinje">
