--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -63,6 +63,9 @@
 <!ENTITY Ctr_closeonleft	"Am Anfang des Tabs">
 <!ENTITY Ctr_close_wwltab	"Schließt Fenster mit nur einem sichtbaren Tab (about:config Einstellung)">
 
+<!ENTITY Ctr_hctpinfotab	"Einige Tabvarianten sind nicht kompatibel zu 'Hide Caption Titlebar Plus'.">
+<!ENTITY Ctr_hctpinfoab		"Die Titelleisten-Schaltfläche ist nicht kompatibel zu 'Hide Caption Titlebar Plus'.">
+
 <!ENTITY Ctr_appbutton		"Firefox-Schaltfläche">
 <!ENTITY Ctr_appbutton0		"Deaktiviert">
 <!ENTITY Ctr_appbutton1		"Auf den Symbolleisten">
