--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -63,6 +63,9 @@
 <!ENTITY Ctr_closeonleft	"Εναλλακτική θέση στην καρτέλα">
 <!ENTITY Ctr_close_wwltab	"Κλείσιμο παραθύρου κλείνοντας την τελευταία ορατή καρτέλα (about:config)">
 
+<!ENTITY Ctr_hctpinfotab	"Some tab variations are not compatible to 'Hide Caption Titlebar Plus' add-on.">
+<!ENTITY Ctr_hctpinfoab		"Button on titlebar is not compatible to 'Hide Caption Titlebar Plus' add-on.">
+
 <!ENTITY Ctr_appbutton		"Κουμπί εφαρμογής">
 <!ENTITY Ctr_appbutton0		"Απενεργοποιημένο">
 <!ENTITY Ctr_appbutton1		"Στην εργαλειοθήκη">
