--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -25,21 +25,21 @@
 <!ENTITY Ctr_tabcolors_t	"Texto y colores de pestaña">
 
 <!ENTITY Ctr_tabs			"Pestañas">
-<!ENTITY Ctr_tabs0			"Pestañas curvadas (Australis por defecto)">
+<!ENTITY Ctr_tabs0			"Pestañas curvadas (Australis predeterminado)">
 <!ENTITY Ctr_tabs1			"Pestañas cuadradas (clásico)">
 <!ENTITY Ctr_tabs1m			"Pestañas cuadradas (australizado)">
 <!ENTITY Ctr_tabs2			"Pestañas curvadas (alternativo)">
 <!ENTITY Ctr_tabs3			"Pestañas curvadas (Aero alternativo)">
-<!ENTITY Ctr_tabforminfo	"La apariencia de la pestaña está controlada por el tema de decoración actual.">
-<!ENTITY Ctr_coltabsinfo	"Tab appearance is not fully compatible to 'ColorfulTabs' add-on!">
-<!ENTITY Ctr_tabsontop0		"Pestañas arriba (por defecto)">
+<!ENTITY Ctr_tabforminfo	"El aspecto de la pestaña está controlado por el tema de decoración actual.">
+<!ENTITY Ctr_coltabsinfo	"¡El aspecto de la pestaña no es completamente compatible con el complemento 'ColorfulTabs'!">
+<!ENTITY Ctr_tabsontop0		"Pestañas arriba (predeterminado)">
 <!ENTITY Ctr_tabsontop1		"Pestañas arriba --- [tabsontop=true] establecido">
 <!ENTITY Ctr_tabsontop2		"Pestañas no arriba (v1) --- [tabsontop=false] establecido">
 <!ENTITY Ctr_tabsontop3		"Pestañas no arriba (v2) --- [tabsontop=false] establecido">
 <!ENTITY Ctr_tabsontopW1	"¡v2 es sólo para algunos complementos y temas completos!">
 <!ENTITY Ctr_tabsontopI1	"Se añade el atributo [tabsontop=true/false] a">
 <!ENTITY Ctr_tabsintitlebar	"Pestañas en la barra de título (about:config >> browser.tabs.drawInTitlebar)">
-<!ENTITY Ctr_tabwidthdef	"(por defecto)">
+<!ENTITY Ctr_tabwidthdef	"(predeterminado)">
 <!ENTITY Ctr_tabwidthcla	"(clásico)">
 <!ENTITY Ctr_tabminheight	"Altura:">
 <!ENTITY Ctr_tabheightinfo	"¡Valores bajos causarán problemas en modo maximizado!">
@@ -63,6 +63,9 @@
 <!ENTITY Ctr_closeonleft	"Posición alternativa en la pestaña">
 <!ENTITY Ctr_close_wwltab	"Cerrar ventana con la última pestaña visible (about:config >> browser.tabs.closeWindowWithLastTab)">
 
+<!ENTITY Ctr_hctpinfotab	"Algunas variaciones de las pestañas no son compatibles con el complemento 'Hide Caption Titlebar Plus'.">
+<!ENTITY Ctr_hctpinfoab		"El botón en la barra de título no es compatible con el complemento 'Hide Caption Titlebar Plus'.">
+
 <!ENTITY Ctr_appbutton		"Botón de la aplicación">
 <!ENTITY Ctr_appbutton0		"Botón deshabilitado">
 <!ENTITY Ctr_appbutton1		"Botón en la barra de herramientas">
@@ -71,7 +74,7 @@
 <!ENTITY Ctr_appbutton2h	"Botón en la barra de título [de Firefox] (oculto)">
 <!ENTITY Ctr_appbutton2io	"Botón en la barra de título [de Firefox] (sólo icono)">
 <!ENTITY Ctr_paneluibtweak	"Botón de menú de panel naranja en la barra de pestañas">
-<!ENTITY Ctr_appbuttonc_o	"Color de botón naranja (por defecto)">
+<!ENTITY Ctr_appbuttonc_o	"Color de botón naranja (predeterminado)">
 <!ENTITY Ctr_appbuttonc_a	"Color de botón azul (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Color de botón negro (Nightly)">
 <!ENTITY Ctr_appbuttonc_t	"Botón transparente">
@@ -129,10 +132,10 @@
 <!ENTITY Ctr_cpanelmenus	"Menús de panel: Vista compacta (marcadores, historial, etc.)">
 <!ENTITY Ctr_hidezoomres	"Controles de zoom en la barra de herramientas: Ocultar botón de restablecimiento del zoom">
 <!ENTITY Ctr_alt_newtabp	"Página de nueva pestaña: Apariencia alternativa">
-<!ENTITY Ctr_bmbutpanelm	"Bookmarks menu button: panel menu appearance">
-<!ENTITY Ctr_bmbutnotext	"Bookmarks menu button: hide label on bookmarks bar">
+<!ENTITY Ctr_bmbutpanelm	"Botón de menú Marcadores: Aspecto del panel de menú">
+<!ENTITY Ctr_bmbutnotext	"Botón de menú Marcadores: Ocultar etiqueta en la barra de marcadores">
 <!ENTITY Ctr_noresizerxp	"Ocultar redimensionador (Windows XP)">
-<!ENTITY Ctr_extraurlkeycb	"Open additional location bar (Cmd/Ctrl+">
+<!ENTITY Ctr_extraurlkeycb	"Abrir barra de direcciones adicional (Cmd/Ctrl+">
 <!ENTITY Ctr_pmhidelabels	"Menú de panel emergente: Ocultar etiquetas de los botones">
 <!ENTITY Ctr_menupopupscr	"Menús emergentes: Mostrar barras de desplazamiento en lugar de flechas">
 
@@ -149,7 +152,7 @@
 <!ENTITY Ctr_tab_tf_info2	"¡Las entradas no serán validadas!">
 <!ENTITY Ctr_tabact_t		"activa">
 <!ENTITY Ctr_tabhov_t		"señalada">
-<!ENTITY Ctr_tabnor_t		"por defecto">
+<!ENTITY Ctr_tabnor_t		"predeterminada">
 <!ENTITY Ctr_tabpen_t		"no cargada">
 <!ENTITY Ctr_tabunr_t		"no leída">
 <!ENTITY Ctr_ntab_t			"nueva pestaña">
@@ -161,7 +164,7 @@
 <!ENTITY Ctr_tabact			"Pestaña activa">
 <!ENTITY Ctr_tabpen			"Pestaña no cargada">
 <!ENTITY Ctr_tabunr			"Pestaña no leída">
-<!ENTITY Ctr_ntabnor		"Nueva pestaña por defecto">
+<!ENTITY Ctr_ntabnor		"Nueva pestaña predeterminada">
 <!ENTITY Ctr_ntabhov		"Nueva pestaña señalada">
 <!ENTITY Ctr_bold			"Negrita">
 <!ENTITY Ctr_italic			"Cursiva">
@@ -204,7 +207,7 @@
 <!ENTITY Ctr_dblclnewtab	"El doble clic abre una 'nueva' pestaña (about:config >> browser.newtab.url)">
 <!ENTITY Ctr_hidetbwot		"Ocultar barra de pestañas con una sola pestaña">
 <!ENTITY Ctr_hidetbwote		"Reducir retardo al ocultar en el inicio">
-<!ENTITY Ctr_hidetbwote2	"Keep titlebar (tabs on top)">
+<!ENTITY Ctr_hidetbwote2	"Conservar barra de título (pestañas arriba)">
 <!ENTITY Ctr_notabfog		"Eliminar niebla de fondo (Windows Aeroglass/8)">
 <!ENTITY Ctr_notabbg		"Eliminar color de fondo (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Reducir espacio sobre la barra de herramientas (si es posible)">
@@ -224,7 +227,7 @@
 <!ENTITY Ctr_nonavborder	"Añadir borde superior a la barra de marcadores">
 <!ENTITY Ctr_nonavtbborder	"Barras de herramientas en la parte superior: Eliminar bordes de barra de herramientas">
 <!ENTITY Ctr_hidesbclose	"Barras laterales: Ocultar botón cerrar de la barra lateral">
-<!ENTITY Ctr_notextshadow	"Toolbars: hide shadow for toolbar text and tab text">
+<!ENTITY Ctr_notextshadow	"Barras de herramientas: Ocultar sombra para texto de barra de herramientas y texto de pestaña">
 <!ENTITY Ctr_chevronfix		"Barra de herramientas de navegación: Ocultar doble flecha (chevron) al final de las barras de herramientas">
 
 <!ENTITY Ctr_closeabarbut	"Ocultar botón cerrar de barras de complementos">
@@ -254,11 +257,11 @@
 <!ENTITY Ctr_fx34loop		"Firefox 34+ introdujo características de 'llamada y conversación'. Desmarcar esto las retira.">
 <!ENTITY Ctr_fx35devtheme	"Firefox 35+ introdujo un nuevo 'tema de decoración de desarrollador'. Desmarcar estas preferencias deshabilita el 'tema de desarrollador' y su botón en el modo Personalizar.">
 <!ENTITY Ctr_fx36prefs		"Firefox 36+ introdujo las Opciones (about:preferences) en una pestaña. Desmarcar esta preferencia restaura la antigua ventana de Opciones.">
-<!ENTITY Ctr_e_omtc			"OMTC / hanging tabs issue">
-<!ENTITY Ctr_e_searchui		"Search appearance">
-<!ENTITY Ctr_e_loop			"Calling and conversation">
-<!ENTITY Ctr_e_deved		"Developer Edition Theme">
-<!ENTITY Ctr_e_prefsui		"Preferences in tab">
+<!ENTITY Ctr_e_omtc			"OMTC / problema de cuelgue de pestañas">
+<!ENTITY Ctr_e_searchui		"Aspecto de la búsqueda">
+<!ENTITY Ctr_e_loop			"Llamada y conversación">
+<!ENTITY Ctr_e_deved		"Tema de decoración de la edición de desarrollador">
+<!ENTITY Ctr_e_prefsui		"Preferencias en la pestaña">
 
 
 <!ENTITY Ctr_pw_settings	"Configuración">
@@ -279,7 +282,7 @@
 <!ENTITY Ctr_openInPrivateWindow.accesskey	"P">
 <!ENTITY appMenuGettingStarted.label	"Comenzar">
 
-<!-- For page context entries. Have to be adjusted for every locale! -->
+<!-- For page context entries. Have to be adjusted for every locale! a-s-r-p-m -->
 <!ENTITY backCmd.accesskey            "n">
 <!ENTITY forwardCmd.accesskey         "g">
 <!ENTITY reloadCmd.accesskey          "a">
