--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -63,6 +63,9 @@
 <!ENTITY Ctr_closeonleft	"Posizione alternativa sulla scheda">
 <!ENTITY Ctr_close_wwltab	"Chiudi la finestra con l'ultima scheda visibile (about:config)">
 
+<!ENTITY Ctr_hctpinfotab	"Some tab variations are not compatible to 'Hide Caption Titlebar Plus' add-on.">
+<!ENTITY Ctr_hctpinfoab		"Button on titlebar is not compatible to 'Hide Caption Titlebar Plus' add-on.">
+
 <!ENTITY Ctr_appbutton		"Pulsante applicazione">
 <!ENTITY Ctr_appbutton0		"Nessun pulsante">
 <!ENTITY Ctr_appbutton1		"Pulsante nella barra degli strumenti">
