--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -63,6 +63,9 @@
 <!ENTITY Ctr_closeonleft	"标签页上的备选位置">
 <!ENTITY Ctr_close_wwltab	"关闭最后一个可见标签页后关闭窗口 (about:config 选项)">
 
+<!ENTITY Ctr_hctpinfotab	"Some tab variations are not compatible to 'Hide Caption Titlebar Plus' add-on.">
+<!ENTITY Ctr_hctpinfoab		"Button on titlebar is not compatible to 'Hide Caption Titlebar Plus' add-on.">
+
 <!ENTITY Ctr_appbutton		"应用程序按钮">
 <!ENTITY Ctr_appbutton0		"按钮已禁用">
 <!ENTITY Ctr_appbutton1		"在工具栏上显示">
