--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -31,7 +31,7 @@
 <!ENTITY Ctr_tabs2			"Вигнуті вкладки (альтернативні)">
 <!ENTITY Ctr_tabs3			"Вигнуті вкладки (альтернативні Aero)">
 <!ENTITY Ctr_tabforminfo	"Вигляд вкладки контролюється поточною темою.">
-<!ENTITY Ctr_coltabsinfo	"Tab appearance is not fully compatible to 'ColorfulTabs' add-on!">
+<!ENTITY Ctr_coltabsinfo	"Вигляд вкладки не повністю сумісний з додатком ColorfulTabs!">
 <!ENTITY Ctr_tabsontop0		"Вкладки нагорі (типово)">
 <!ENTITY Ctr_tabsontop1		"Вкладки нагорі --- встановлено [tabsontop=true]">
 <!ENTITY Ctr_tabsontop2		"Вкладки не нагорі (v1) --- встановлено [tabsontop=false]">
@@ -63,8 +63,8 @@
 <!ENTITY Ctr_closeonleft	"Альтернативна позиція на вкладці">
 <!ENTITY Ctr_close_wwltab	"Закрити вікно з останньою видимою вкладкою (about:config)">
 
-<!ENTITY Ctr_hctpinfotab	"Some tab variations are not compatible to 'Hide Caption Titlebar Plus' add-on.">
-<!ENTITY Ctr_hctpinfoab		"Button on titlebar is not compatible to 'Hide Caption Titlebar Plus' add-on.">
+<!ENTITY Ctr_hctpinfotab	"Деякі різновиди вкладок не сумісні з додатком Hide Caption Titlebar Plus.">
+<!ENTITY Ctr_hctpinfoab		"Кнопка на панелі заголовку не сумісна з додатком Hide Caption Titlebar Plus.">
 
 <!ENTITY Ctr_appbutton		"Кнопка програми">
 <!ENTITY Ctr_appbutton0		"Кнопка вимкнена">
@@ -132,8 +132,8 @@
 <!ENTITY Ctr_cpanelmenus	"Панель меню: компактний вигляд (закладки, історія тощо)">
 <!ENTITY Ctr_hidezoomres	"Управління масштабом на панелі: приховати кнопку скидання масштабу">
 <!ENTITY Ctr_alt_newtabp	"Сторінка нової вкладки: альтернативний вигляд">
-<!ENTITY Ctr_bmbutpanelm	"Bookmarks menu button: panel menu appearance">
-<!ENTITY Ctr_bmbutnotext	"Bookmarks menu button: hide label on bookmarks bar">
+<!ENTITY Ctr_bmbutpanelm	"Кнопка меню закладок: вигляд меню панелі">
+<!ENTITY Ctr_bmbutnotext	"Кнопка меню закладок: приховати ярлик на панелі закладок">
 <!ENTITY Ctr_noresizerxp	"Приховати «Індикатор зміни розміру» (Windows XP)">
 <!ENTITY Ctr_extraurlkeycb	"Відкрити додаткову панель адреси (Cmd/Ctrl+">
 <!ENTITY Ctr_pmhidelabels	"Спливаюче вікно панелі меню: приховати написи на кнопках">
@@ -207,7 +207,7 @@
 <!ENTITY Ctr_dblclnewtab	"Подвійний клік відкриває нову вкладку (використовує адресу нової вкладки браузера)">
 <!ENTITY Ctr_hidetbwot		"Приховувати панель вкладок з одною вкладкою">
 <!ENTITY Ctr_hidetbwote		"Зменшити затримки приховування при запуску">
-<!ENTITY Ctr_hidetbwote2	"Keep titlebar (tabs on top)">
+<!ENTITY Ctr_hidetbwote2	"Утримувати панель заголовку (вкладки нагорі)">
 <!ENTITY Ctr_notabfog		"Прибрати затуманення тла (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"Прибрати колір тла (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Зменшити простір над панеллю інструментів (якщо можливо)">
@@ -257,11 +257,11 @@
 <!ENTITY Ctr_fx34loop		"В Firefox 34+ введені особливості «виклику та сеансу зв’язку». Вимкнення цього параметру видалить їх.">
 <!ENTITY Ctr_fx35devtheme	"В Firefox 35+ введено нову «тему» від розробника. Вимкнення цих налаштувань вимикає цю «тему» і її кнопку в ручному режимі налаштувань.">
 <!ENTITY Ctr_fx36prefs		"В Firefox 36+ введено нове налаштування у вкладці. Вимкнення цього пункту відновлює вікно зі старими налаштуванням.">
-<!ENTITY Ctr_e_omtc			"OMTC / hanging tabs issue">
-<!ENTITY Ctr_e_searchui		"Search appearance">
-<!ENTITY Ctr_e_loop			"Calling and conversation">
-<!ENTITY Ctr_e_deved		"Developer Edition Theme">
-<!ENTITY Ctr_e_prefsui		"Preferences in tab">
+<!ENTITY Ctr_e_omtc			"OMTC / проблеми завислих вкладок">
+<!ENTITY Ctr_e_searchui		"Вигляд панелі Пошук">
+<!ENTITY Ctr_e_loop			"Виклик та сеанс зв’язку">
+<!ENTITY Ctr_e_deved		"Тема від розробника">
+<!ENTITY Ctr_e_prefsui		"Налаштування у вкладці">
 
 
 <!ENTITY Ctr_pw_settings	"Налаштування">
